--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Ubuntu";
+  src: local("Ubuntu-LightItalic"),
+    url("./assests/fonts/Ubuntu-LightItalic.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Medium";
+  src: local("Ubuntu-Medium"),
+    url("./assets/fonts/Ubuntu-Medium.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Bold";
+  src: local("Ubuntu-Bold"),
+    url("./assets/fonts/Ubuntu-Bold.ttf") format("truetype");
+}
